# ethernet-can

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app_notes/: Multiple Boards.md
config/: config.ini
extra/: 10-ethernet-can.yaml  ethernet-can.service  start_ethernet-can.sh  start_ethernet_can.py  start_vcan.sh
extra/SD-card/: ethernet.ini
extra/configs/: example.ini
firmware/: ETH-723VE.hex  README.md  STM32G4-SPI-CAN.hex
src/: circ_buffer.cpp  circ_buffer.h  helpers.cpp  helpers.h  main.cpp
